order states by count

--- a/tweeters-2013-09-15/0-states.html
+++ b/tweeters-2013-09-15/0-states.html
@@ -1,55 +1,55 @@
 <html><body>
 <h2>52 States</h2>
-<div><a href='AL.html'>AL</a></div>
-<div><a href='AR.html'>AR</a></div>
-<div><a href='AZ.html'>AZ</a></div>
-<div><a href='CA.html'>CA</a></div>
-<div><a href='CO.html'>CO</a></div>
-<div><a href='CT.html'>CT</a></div>
-<div><a href='DC.html'>DC</a></div>
-<div><a href='DE.html'>DE</a></div>
-<div><a href='FL.html'>FL</a></div>
-<div><a href='GA.html'>GA</a></div>
-<div><a href='HI.html'>HI</a></div>
-<div><a href='IA.html'>IA</a></div>
-<div><a href='ID.html'>ID</a></div>
-<div><a href='IL.html'>IL</a></div>
-<div><a href='IN.html'>IN</a></div>
-<div><a href='KS.html'>KS</a></div>
-<div><a href='KY.html'>KY</a></div>
-<div><a href='LA.html'>LA</a></div>
-<div><a href='LND.html'>LND</a></div>
-<div><a href='MA.html'>MA</a></div>
-<div><a href='MD.html'>MD</a></div>
-<div><a href='ME.html'>ME</a></div>
-<div><a href='MI.html'>MI</a></div>
-<div><a href='MN.html'>MN</a></div>
-<div><a href='MO.html'>MO</a></div>
-<div><a href='MS.html'>MS</a></div>
-<div><a href='MT.html'>MT</a></div>
-<div><a href='NC.html'>NC</a></div>
-<div><a href='ND.html'>ND</a></div>
-<div><a href='NE.html'>NE</a></div>
-<div><a href='NH.html'>NH</a></div>
-<div><a href='NJ.html'>NJ</a></div>
-<div><a href='NM.html'>NM</a></div>
-<div><a href='NV.html'>NV</a></div>
-<div><a href='NY.html'>NY</a></div>
-<div><a href='OH.html'>OH</a></div>
-<div><a href='OK.html'>OK</a></div>
-<div><a href='ON.html'>ON</a></div>
-<div><a href='OR.html'>OR</a></div>
-<div><a href='PA.html'>PA</a></div>
-<div><a href='PR.html'>PR</a></div>
-<div><a href='RI.html'>RI</a></div>
-<div><a href='SC.html'>SC</a></div>
-<div><a href='TN.html'>TN</a></div>
-<div><a href='TX.html'>TX</a></div>
-<div><a href='UT.html'>UT</a></div>
-<div><a href='VA.html'>VA</a></div>
-<div><a href='VT.html'>VT</a></div>
-<div><a href='WA.html'>WA</a></div>
-<div><a href='WI.html'>WI</a></div>
-<div><a href='WV.html'>WV</a></div>
-<div><a href='WY.html'>WY</a></div>
+<div><a href='CA.html'>CA (642)</a></div>
+<div><a href='TX.html'>TX (394)</a></div>
+<div><a href='FL.html'>FL (323)</a></div>
+<div><a href='OR.html'>OR (222)</a></div>
+<div><a href='NY.html'>NY (163)</a></div>
+<div><a href='WA.html'>WA (142)</a></div>
+<div><a href='DC.html'>DC (142)</a></div>
+<div><a href='NC.html'>NC (108)</a></div>
+<div><a href='OH.html'>OH (108)</a></div>
+<div><a href='CO.html'>CO (101)</a></div>
+<div><a href='HI.html'>HI (98)</a></div>
+<div><a href='IL.html'>IL (94)</a></div>
+<div><a href='PA.html'>PA (90)</a></div>
+<div><a href='AZ.html'>AZ (81)</a></div>
+<div><a href='MA.html'>MA (75)</a></div>
+<div><a href='MN.html'>MN (70)</a></div>
+<div><a href='VA.html'>VA (66)</a></div>
+<div><a href='MD.html'>MD (64)</a></div>
+<div><a href='TN.html'>TN (64)</a></div>
+<div><a href='GA.html'>GA (63)</a></div>
+<div><a href='IN.html'>IN (63)</a></div>
+<div><a href='NV.html'>NV (52)</a></div>
+<div><a href='RI.html'>RI (49)</a></div>
+<div><a href='MO.html'>MO (47)</a></div>
+<div><a href='CT.html'>CT (44)</a></div>
+<div><a href='LA.html'>LA (38)</a></div>
+<div><a href='NJ.html'>NJ (33)</a></div>
+<div><a href='MI.html'>MI (32)</a></div>
+<div><a href='OK.html'>OK (29)</a></div>
+<div><a href='WI.html'>WI (27)</a></div>
+<div><a href='SC.html'>SC (26)</a></div>
+<div><a href='UT.html'>UT (17)</a></div>
+<div><a href='ID.html'>ID (17)</a></div>
+<div><a href='KY.html'>KY (15)</a></div>
+<div><a href='ME.html'>ME (15)</a></div>
+<div><a href='KS.html'>KS (13)</a></div>
+<div><a href='AL.html'>AL (11)</a></div>
+<div><a href='NM.html'>NM (10)</a></div>
+<div><a href='ND.html'>ND (8)</a></div>
+<div><a href='DE.html'>DE (7)</a></div>
+<div><a href='VT.html'>VT (6)</a></div>
+<div><a href='NE.html'>NE (6)</a></div>
+<div><a href='PR.html'>PR (5)</a></div>
+<div><a href='AR.html'>AR (4)</a></div>
+<div><a href='MT.html'>MT (4)</a></div>
+<div><a href='ON.html'>ON (2)</a></div>
+<div><a href='IA.html'>IA (2)</a></div>
+<div><a href='WY.html'>WY (2)</a></div>
+<div><a href='MS.html'>MS (1)</a></div>
+<div><a href='NH.html'>NH (1)</a></div>
+<div><a href='WV.html'>WV (1)</a></div>
+<div><a href='LND.html'>LND (1)</a></div>
 </body></html>
